# Exhibit-A

./: .gitignore  AGENTS.md  CITATION.cff  README.md
docs/: ARCHAEOLOGY.md  BUG_IDENTITY.md  (+17 more)
engine/: README.md  pyproject.toml
engine/exhibit_a/: __init__.py  cli.py  eef.py  engine.py
engine/exhibit_a/executor/: base.py  docker_exec.py  instrumented.py  local_exec.py
engine/exhibit_a/hypothesis/: counterpatch.py  generator.py  intent.py  property.py
engine/exhibit_a/intake/: __init__.py  git_bisect.py  git_checkout.py
engine/exhibit_a/models/: case.py
engine/exhibit_a/operations/: __init__.py  policy.py
engine/exhibit_a/store/: json_store.py  research.py  suite_gap.py
engine/exhibit_a/studies/: __init__.py  archaeology.py  bug_identity.py  oracle_gap.py  property_escalation.py  reproducibility.py  self_audit.py  triangulation.py
engine/exhibit_a/verdict/: diff_location.py  evidence_strength.py  flip_check.py  minimization.py  mutation_testing.py
engine/tests/: test_archaeology.py  test_bug_identity.py  test_case_schema_sync.py  test_cli_replay.py  test_cli_study.py  test_codex_generator.py  test_diff_location.py  test_docker_executor.py  test_eef.py  test_engine_e2e.py  test_environment_dataset.py  test_evidence_strength.py  test_flip_check.py  test_git_bisect.py  test_git_checkout.py  test_intent_judge.py  test_minimization.py  test_mutation_testing.py  test_operational_policy.py  test_oracle_gap.py  test_property_escalation.py  test_reproducibility_study.py  test_research_store.py  test_self_audit.py  test_suite_gap_store.py  test_triangulation.py
(+35 files in other folders)
